Fri Nov 26 17:10:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc(HTML & do_tag): add code to turn off indexing between
	<style> and </style> tags.

Fri Nov 26 16:31:06 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc(Read): fixed to allow final line without
	terminating newline character, rather than ignoring it.
	* htlib/String.cc(write): added Alexis Mikhailov's fix to bump up
	pointer after writing a block.
	* htsearch/Display.cc(setVariables): added Alexis Mikhailov's fix
	to check the number of pages against maximum_pages at the right time.
	(Put it even earlier, to make sure nPages is at least 1.)
	* htsearch/Display.cc(generateStars): Remove extra newline after
	STARSRIGHT and STARSLEFT variables, noted by Torsten Neuer
	<tneuer@inwise.de>.

Wed Nov 24 20:33:13 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/htdig.conf: Add bad_extensions to make it
	more obvious to users how to exclude certain document types.
	Fix the comments for search_algorithm to refer to all the current
	possibilities.	Add example of no_excerpt_show_top attribute in
	line with most user's expectations.  (Geoff's changes)

Wed Nov 24 20:02:32 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/search.html (Match): Add Boolean to default search
	form, as suggested by PR#561.

Tue Nov 23 23:03:45 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(setupTemplates), htsearch/Display.h: fixed a
	couple of compilation errors in template_patterns code.

Tue Nov 23 22:16:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Retriever.cc(got_href): Applied Patrick's case insensitive
	server fix, to lowercase all URLs if case_sensitive is false.

Tue Nov 23 22:08:22 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/StringList.cc(Join): Applied Loic's patch to fix memory leak.

Tue Nov 23 21:52:18 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>
